# GalaxyEmu

./: pyproject.toml
Examples/: PSO.ipynb  cleaner.py
Examples/data/: covariance_matrix_bin_1.txt  covariance_matrix_bin_2.txt  covariance_matrix_bin_3.txt  covariance_matrix_bin_4.txt  covariance_matrix_bin_5.txt  covariance_matrix_bin_6.txt  w_rp_bin_1.txt  w_rp_bin_2.txt  w_rp_bin_3.txt  w_rp_bin_4.txt  w_rp_bin_5.txt  w_rp_bin_6.txt
src/: GalaxyEmu.py  __init__.py
v2/: metadata_wp_20Mpc  metadata_wp_30Mpc  wp_20Mpc.keras
