[project]
name = "GalaxyEmu"
version = "2.0.0"
authors = [
  { name="Sergio Contreras", email="el.hantke@gmail.com" },
]
description = "Emulator of Galaxy Clustering"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
